--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^20.17.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.10.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.6",
-    "next": "^15.0.3",
-    "react": "^18.3.1",
+    "chart.js": "^4.4.7",
+    "next": "^15.0.4",
+    "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.6.3"
+    "react-dom": "^19.0.0",
+    "typescript": "^5.7.2"
   }
 }
